--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <a href="difocus3/index.html">Слайд-шоу из изображений</a>
         <a class="git-hub" href="https://github.com/Gingadreyka/difocus">GitHub code</a>
     </div>
+    <div>
+        Работодаетлю не понрасилось :(
+    </div>
 </body>
 
 </html>
