--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <a href="difocus2/index.html">Сделать только css</a>
         <a href="difocus3/index.html">Слайд-шоу из изображений</a>
         <a class="git-hub" href="https://github.com/Gingadreyka/difocus">GitHub code</a>
-    </div>
-    <div>
-        Работодаетлю не понрасилось :(
+        Работодаетлю не понравилось :(
     </div>
 </body>
 
